k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hangman-app
  labels:
    app: hangman-app
spec:
  selector:
    app: hangman-app
  ports:
  - port: 80
    targetPort: 4000
    protocol: TCP
    name: http
